Removed unlink feature
